--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
 	<link rel="stylesheet" type="text/css" href="style/ma.css" charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="style/simplegrid.css" charset="utf-8" />
 
-	
 	<script>
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-	ga('create', 'UA-21837222-1', 'hellomatthew.com');
-	ga('send', 'pageview');
-	
+  ga('create', 'UA-21837222-1', 'hellomatthew.com');
+  ga('send', 'pageview');
+
 	var _gaq = _gaq || [];
 	_gaq.push(['_setAccount', 'UA-21837222-1']);
 	_gaq.push(['_trackPageview']);
