--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       		<ul>
       		<li><a href="mailto:mattandrws@gmail.com" onClick="_gaq.push(['_trackEvent', 'Contact', 'Click', 'Email MA']);">Matthew Andrews</a></li>
 			<li><a href="https://dl.dropboxusercontent.com/u/33512/MA2014.pdf" target="_blank" onClick="_gaq.push(['_trackEvent', 'Portfolio', 'Click', 'View Portfolio']);">Creative Director</a> </li>
-			<li> <a href="http://instagram.com/hellomatthew" target="_blank">Surfer & Traveler</a></li>
-			<li><a href="http://agencynowhere.com" target="_blank">Brooklyn  & Nowhere</a></li>
+			<li><a href="http://holamatthew.tumblr.com" target="_blank">Not Instagram</a></li>
+			<li> <a href="http://instagram.com/hellomatthew" target="_blank">Instagram</a></li>
       		</ul>
       		</h2>
     	</div>    
