--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 			<li><a href="https://dl.dropboxusercontent.com/u/33512/MA2014.pdf" target="_blank" onClick="_gaq.push(['_trackEvent', 'Portfolio', 'Click', 'View Portfolio']);">Creative Director</a> </li>
 			<li><a href="http://holamatthew.tumblr.com" target="_blank">Not Instagram</a></li>
 			<li> <a href="http://instagram.com/hellomatthew" target="_blank">Instagram</a></li>
+			<li><a href="www.linkedin.com/in/hellomatthew/" target="_blank">Linkedin</a></li>
       		</ul>
       		</h2>
     	</div>    
