--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<title>Hello, Matthew</title>
-	<meta name="description" content="Matthew Andrews is an executive creative director and awesome dude who lives in Brooklyn, NYC." />
+	<meta name="description" content="Matthew Andrews. Creative director Words & Ideas. Brooklyn, NYC." />
 	<meta name="keywords" content="Ideas, Digital, Advertising, Products, Branding, Fun, NYC, New York, Apps, Start-Up, Media, Matthew Andrews, Creative Director, Portfolio, Book" />
 	<meta name="ROBOTS" content="INDEX,FOLLOW">
 	<link rel="shortcut icon" href="/nw.ico">
