--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       		<span class="hdln">Hello,</span>
       		<ul>
       		<li><a href="mailto:mattandrws@gmail.com" onClick="_gaq.push(['_trackEvent', 'Contact', 'Click', 'Email MA']);">Matthew Andrews</a></li>
-			<li><a href="https://dl.dropboxusercontent.com/u/33512/MA2014.pdf" target="_blank" onClick="_gaq.push(['_trackEvent', 'Portfolio', 'Click', 'View Portfolio']);">Creative Director</a> </li>
+			<li><a href="https://dl.dropboxusercontent.com/u/33512/MA2014.pdf" target="_blank" onClick="_gaq.push(['_trackEvent', 'Portfolio', 'Click', 'View Portfolio']);">Creative Director (.pdf)</a> </li>
 			<li><a href="http://holamatthew.tumblr.com" target="_blank">Not Instagram</a></li>
 			<li> <a href="http://instagram.com/hellomatthew" target="_blank">Instagram</a></li>
 			<li><a href="http://linkedin.com/in/hellomatthew/" target="_blank">Linkedin</a></li>
